# claude-tui-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.fix-issue/: audit-log.md  plan.md  summary.md
.fix-issue/research/: codebase-map.md  git-history.md  issue-analysis.md
.fix-issue/validation/: baseline-test-results.md  review-architecture.md  review-security.md  review-simplicity.md  test-results.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  feat.md
.github/workflows/: ci.yml
scripts/: audit.sh  push-public.sh  self_heal.py
