[project]
name = "claude-tui-tools"
version = "0.2.0"
description = "TUI Tools for Claude Code"
requires-python = ">=3.10"
license = "MIT"

[project.optional-dependencies]
all = [
    "claude-tui-settings @ file:packages/settings",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
