[project]
name = "claude-tui-tools"
version = "0.3.0"
description = "TUI Tools for Claude Code"
requires-python = ">=3.10"
license = "MIT"

[project.optional-dependencies]
all = [
    "claude-tui-settings @ file:packages/settings",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
